Fix main upload link overflow

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -209,6 +209,8 @@ body.dragging > .files {
 .files > .file > .link {
     position: relative;
     font-size: 22px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .files > .file > .link::after {
